--- a/prose_max.css
+++ b/prose_max.css
@@ -3246,7 +3246,9 @@
   font-size: var(--katex-font-size);
 }
 .article-outline-toggle {
-  position: absolute;
+  position: fixed;
+  right: 1.25rem;
+  bottom: 1.25rem;
   width: 0;
   height: 0;
   opacity: 0;
